<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/start"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center" >

    <LinearLayout
        android:id="@+id/levelsection_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/start_iv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/fish1"
            android:layout_marginRight="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/leveleselection"
            android:textSize="26sp" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/text"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/levelsection_ll"
        android:layout_centerVertical="true"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:rowCount="3">

        <Button
            android:id="@+id/level_1"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:onClick="startGame"
            android:text="@string/level1"
            android:textSize="24sp" />

        <Button
            android:id="@+id/level_2"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:onClick="startGame"
            android:text="@string/level2"
            android:textSize="24sp" />

        <Button
            android:id="@+id/level_3"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:onClick="startGame"
            android:text="@string/level3"
            android:textSize="24sp" />

        <Button
            android:id="@+id/level_4"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:onClick="startGame"
            android:text="@string/level4"
            android:textSize="24sp" />

        <Button
            android:id="@+id/level_5"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:onClick="startGame"
            android:text="@string/level5"
            android:textSize="24sp" />
        <Button
            android:id="@+id/level_6"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:onClick="startGame"
            android:text="@string/level6"
            android:textSize="24sp" />
    </GridLayout>
</RelativeLayout>
</FrameLayout>