<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/start"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textSize="32sp"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:id="@+id/start_iv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/fish1"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/levelmenue_bt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/start_iv"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:onClick="levelMenue"
            android:text="@string/levelmenue"
            android:textSize="24sp" />
        <Button
            android:id="@+id/leaderboard_bt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/leaderboard"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/levelmenue_bt"/>
        <Button
            android:id="@+id/shop_bt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/shop"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/leaderboard_bt"/>

        <Button
            android:id="@+id/quit_bt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shop_bt"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:onClick="quit"
            android:text="@string/quit"
            android:textSize="24sp" />
    </RelativeLayout>
</FrameLayout>