<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@android:style/Theme.NoTitleBar"
        android:background="#1A283E">

    <Button
            android:id="@+id/button3"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:background="#00FFFFFF"
            android:drawableLeft="@drawable/ic_arrow_back_50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="backToLogin"/>

    <ImageView
            android:id="@+id/imageView2"
            android:layout_width="143dp"
            android:layout_height="140dp"
            android:layout_marginTop="76dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/fish_hr" />

    <Button
            android:id="@+id/levelMenu"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_background"
            android:onClick="levelMenue"
            android:shadowColor="#00FFFFFF"
            android:text="LEVEL MENU"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#00BFFF"
            android:textColorHint="#D5D5D5"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
            android:id="@+id/leaderboard"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_background"
            android:onClick="leaderboard"
            android:shadowColor="#00FFFFFF"
            android:text="@string/leaderboard"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#00BFFF"
            android:textColorHint="#D5D5D5"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/levelMenu" />

    <Button
            android:id="@+id/shop"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_background"
            android:onClick="shop"
            android:shadowColor="#00FFFFFF"
            android:text="@string/shop"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#00BFFF"
            android:textColorHint="#D5D5D5"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/leaderboard" />

    <Button
            android:id="@+id/quit"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_background"
            android:onClick="quit"
            android:shadowColor="#00FFFFFF"
            android:text="@string/quit"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#00BFFF"
            android:textColorHint="#D5D5D5"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shop" />

    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Flying Fish"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>